# stock-market-tech-analysis

./: DEPLOYMENT.md  README.md  pyproject.toml  render.yaml  run_api.py
.github/workflows/: deploy-frontend.yml
backend/: __init__.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  run.py
backend/core/: __init__.py  banknifty_stocks.py  data_validator.py  dow_theory.py  global_markets.py  nifty50_stocks.py  nse_fetcher.py  sector_scanner.py  sector_stocks.py  technical_indicators.py
backend/routers/: markets.py  scanner.py  sectors.py  stocks.py
backend/services/: global_markets.py  scanner.py
docs/: CURSOR_CONTEXT.md  PRD.md
frontend/: REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: 404.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: config.js  scanner.js
frontend/src/components/: BenchmarkCard.jsx  CategoryView.jsx  DataTable.jsx  Filters.jsx  Header.jsx  Loader.jsx
frontend/src/components/markets/: EmptyState.jsx  FilterControls.jsx  LoadingState.jsx  MarketCard.jsx  MarketGroup.jsx  MarketTable.jsx  PageHeader.jsx  SentimentCards.jsx  VixInfoModal.jsx  index.js
frontend/src/components/ui/: badge.jsx  card.jsx  index.js  input.jsx  select.jsx  (+2 more)
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: BankNifty.jsx  Commodity.jsx  DowTheoryScanner.jsx  GlobalMarkets.jsx  Nifty50.jsx  PerformanceOverview.jsx  SectorPerformance.jsx  SectorStockDetail.jsx  SectorStocks.jsx  StockAnalysis.jsx
frontend/src/utils/: formatters.js  marketCalculations.js
