[project]
name = "asta-backend"
version = "1.2.0"
description = "ASTA - Stock Market Technical Analysis Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.0",   # For NSE India fallback
    "ta>=0.11.0",
    "uvicorn>=0.40.0",
    "yfinance>=1.0",      # Primary data source
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
